# urban-traffic-prediction-repo

./: .gitignore  Dockerfile  Makefile  README.md  app.py  data.dvc  dvc.yaml  models.dvc  params.yaml  params_experiment.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/preprocessed/: preprocessed_data.csv
data/processed/: X_test.csv.dvc  X_train.csv.dvc  processed_data.csv  y_test.csv.dvc  y_train.csv.dvc
data/raw/: .gitignore  Behavior of the urban traffic of the city of Sao Paulo in Brazil.csv.dvc
data/split/: test.csv  train.csv
docs/: mkdocs.yml
docs/docs/: index.md
dvc_plots/: index.html
models/: best_model.pkl
notebooks/: 0. data_preprocessing.ipynb  1. test_refactoring.ipynb  2. deploy_test.ipynb  Data Analysis.ipynb  data_preprocessing.py
reports/figures/: .gitignore
reports/metrics/: metrics.json
reports/predictions/: predictions.csv
src/: preprocess_data.py
src/app/: data_process.py
src/data/: analyze.py  data_preprocess.py  preprocess.py  process.py  split.py
src/evaluate/: evaluate_model.py
src/model/: train.py
src/train/: train.py
src/utils/: general.py
tests/: test_app.py  test_preprocess.py  test_process.py
traffic_ml/: __init__.py  dataset.py  features.py  plots.py
traffic_ml/modeling/: predict.py  train.py
