[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "traffic_ml"
version = "0.0.1"
description = "Este proyecto utiliza Machine Learning para analizar y predecir el comportamiento del tr\u00e1fico urbano en la ciudad de S\u00e3o Paulo, Brasil, utilizando datos hist\u00f3ricos de tr\u00e1fico. El objetivo es identificar patrones y tendencias que permitan optimizar la planificaci\u00f3n y gesti\u00f3n del tr\u00e1fico urbano"
authors = [
  { name = "Equipo 15" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["traffic_ml"]
force_sort_within_sections = true
